# se-toolkit-lab-7

./: README.md  docker-compose.yml
backend/: Dockerfile
bot/: .env.bot.example  .gitignore  Dockerfile  ISSUES.md  PLAN.md  README.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  base.py  health.py  help.py  intent.py  labs.py  scores.py  start.py
bot/services/: __init__.py  llm_client.py  lms_client.py
